# centreon-engine

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  Makefile.in  README.md  cmake.sh  conanfile.txt  configure  configure.in  deps.go  deps.sh  grpc.sh  grpc.txt  sonar-project.properties  subst.in  thanks.txt
centenginestats2/: CMakeLists.txt  centenginestats_client.cc  centenginestats_client.hh  main.cc
enginerpc/: CMakeLists.txt  CMakeLists.txt.old  engine.proto  engine_impl.cc  engine_impl.hh  engine_old.proto  enginerpc.cc  enginerpc.hh  index.html
enginerpc/examples/: README-gRPC.md  README-grpc.md  benchmark_new_commands.py  benchmark_old.py  client.py  client_v2.py  engine-rpc-client.py  gRPC_README.md  gen_files.sh  init-proto.sh  service_check.py  update_thresholds.py
modules/: CMakeLists.txt
modules/bench/: CMakeLists.txt
modules/enginerpc/: CMakeLists.txt
modules/external_cmd/: commands.cc  commands.hh  compatibility.cc  compatibility.hh  main.cc  processing.cc  processing.hh  utils.cc  utils.hh
modules/external_commands/: CMakeLists.txt
modules/webservice/: centreon-engine.wsdl  commands.cc  config.xml  configuration.cc  configuration.hh  main.cc  ssl.cc  ssl.hh  syncro.hh  webservice.cc  webservice.hh
src/configuration/: CMakeLists.txt  anomalydetection.cc  command.cc  connector.cc  contact.cc  contactgroup.cc  daterange.cc  deprecated.cc  downtime.cc  duration.cc  group.cc  host.cc  hostdependency.cc  hostescalation.cc  hostextinfo.cc  hostgroup.cc  object.cc  object_info.cc  parser.cc  point_2d.cc  point_3d.cc  reload.cc  service.cc  servicedependency.cc  serviceescalation.cc  serviceextinfo.cc  servicegroup.cc  state.cc  states.cc  timeperiod.cc  timerange.cc
src/retention/: CMakeLists.txt  comment.cc  contact.cc  downtime.cc  dump.cc  host.cc  info.cc  object.cc  parser.cc  program.cc  service.cc  state.cc
src/simumod/: CMakeLists.txt  coder.pl
test/: CMakeLists.txt  globals.c  paths.hh.in  paths.hh.in.in  test_configuration.cc  testing.hh  unittest.hh
test/base/: logging.c
test/broker/: compatibility.cc  handle.cc  loader.cc  mod_compatibility.cc  mod_load.cc  mod_load.hh  mod_test_load.cc  mod_test_load_compatibility.cc  nebmodule.cc  test_compatibility.cc  test_handle.cc  test_loader.cc  test_nebmodule.cc
test/commands/: bin_connector_test_run.cc  bin_test_run.cc  connector_compare.cc  connector_ctor.cc  connector_get.cc  connector_restart.cc  connector_run_async.cc  connector_run_sync.cc  environment_add.cc  environment_compare.cc  environment_ctor.cc  raw_compare.cc  raw_ctor.cc  raw_get.cc  raw_get_set.cc  raw_process.cc  raw_run_async.cc  raw_run_sync.cc  result_compare.cc  result_ctor.cc  result_execution_time.cc  result_get_set.cc  set_basic.cc  set_name_change.cc  wait_process.hh
test/configuration/: CMakeLists.txt  basic.cc  objects_copy.cc  parsing.cc  test_configuration.cc  test_parse_argument.cc
test/core/: CMakeLists.txt  get_next_valid_time.cc  libtesttime.cc  libtesttime.hh  valid_time_week_day_after_current_time.cc  valid_time_week_day_before_current_time.cc  valid_time_week_day_exclude_after_current_time.cc  valid_time_week_day_exclude_before_current_time.cc  valid_time_week_day_exclude_into_current_time.cc  valid_time_week_day_into_current_time.cc
test/downtimes/: recurring.cc
test/error/: assignment.cc  copy_ctor.cc  insert_char.cc  insert_char_array.cc  insert_integer.cc  insert_long.cc  insert_long_long.cc  insert_mixed.cc  insert_string.cc  insert_unsigned_integer.cc  insert_unsigned_long_long.cc
test/events/: CMakeLists.txt  handle_timed_event.cc
test/logging/: CMakeLists.txt  broker.cc  broker_log.cc  broker_show_info.cc  common.cc  common.hh  dummymod.cc  engine.cc  file.cc  module_dummy.cc  test.cc  test.hh  test_broker.cc  test_engine.cc  test_file.cc
test/macros/: CMakeLists.txt  grab_standard_host_macro.cc  grab_standard_service_macro.cc  minimal_setup.cc  minimal_setup.hh
test/modules/: CMakeLists.txt
test/notifications/: escalations.cc
test/object/: remove_command.cc  remove_contact.cc  remove_contactgroup.cc  remove_host.cc  remove_hostgroup.cc  remove_service.cc  remove_servicedependency.cc  remove_serviceescalation.cc  remove_servicegroup.cc  remove_timeperiod.cc
test/objects/: CMakeLists.txt  add_command_to_member.cc  add_contact_to_member.cc  add_contactgroup_to_member.cc  add_custom_variables_to_member.cc  add_host_to_member.cc  add_object_to_member.hh  create_object.cc  create_object.hh  dump.cc  link_contact.cc  link_contactgroup.cc  link_host.cc  link_hostdependency.cc  link_hostescalation.cc  link_hostgroup.cc  link_service.cc  link_servicedependency.cc  link_serviceescalation.cc  link_servicegroup.cc  release.hh  release_command.cc  release_commandsmember.cc  release_contact.cc  release_contactgroup.cc  release_contactgroupsmember.cc  release_contactsmember.cc  release_customvariablesmember.cc  release_daterange.cc  release_host.cc  release_hostdependency.cc  release_hostescalation.cc  release_hostgroup.cc  release_hostsmember.cc  release_objectlist.cc  release_service.cc  release_servicedependency.cc  release_serviceescalation.cc  release_servicegroup.cc  release_servicesmember.cc  (+15 more)
test/retention/: CMakeLists.txt  comment.cc  contact.cc  downtime.cc  dump.cc  host.cc  info.cc  program.cc  service.cc
test/running/: centengine_must_run.cc  downtimes_recur.cc  log_without_pid.cc  logs_for_modules.cc  modules_symbols.cc  modules_symbols_checker.cc  precache_file_generation.cc
test/timeperiod/: get_next_valid_time.cc
tests/: CMakeLists.txt  downtime_finder.cc  helper.cc  helper.hh  main.cc  parse-check-output.cc  test_engine.cc  test_engine.hh
tests/centenginestats2/: centenginestats2.cc
tests/checks/: anomalydetection.cc  service_check.cc  service_retention.cc
tests/commands/: bin_connector_test_run.cc  connector.cc  simple-command.cc
tests/configuration/: contact.cc  host.cc  object.cc  service.cc
tests/contacts/: contactgroup-config.cc  simple-contactgroup.cc
tests/custom_vars/: extcmd.cc
tests/downtimes/: downtime.cc  (+1 more)
(+1874 files in other folders)
